2008-09-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 551149 – xdgmime mem leak

	* xdgmime/xdgmime.c (xdg_mime_init_from_directory): Plug
	a memory leak. Patch by Christian Persch

2008-09-04  Tor Lillqvist  <tml@novell.com>

	* gwin32mount.c (g_win32_mount_finalize): Don't unref icon if
	NULL.

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.18.0 ===

2008-09-02  Michael Natterer  <mitch@imendio.com>

	* *.h: big header formatting cleanup: indentation, vtable
	formatting, consistent spacing in (* vfunc), trailing whitespace
	removal. Formatting should be pretty consistent in all GIO headers
	now.

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	* gmount.h: Document guess_content_type sync vfunc.

2008-09-02  Michael Natterer  <mitch@imendio.com>

	* gbufferedoutputstream.h (struct _GBufferedOutputStreamClass):
	fix parent_class member to be GFilterOutputStreamClass (not
	GOutputStreamClass). Drop three pointers of padding, which is
	exactly what GFilterOutputStreamClass adds to GOutputStreamClass,
	so the class struct size stays the same.

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 550059 – Wrong docs for g_emblemed_icon_add_emblem

	* gemblemedicon.c (g_emblemed_icon_get_add_emblem): Don't document
	nonexisting return values. Pointed out by Cosimo Cecchi.

2008-08-23  Tor Lillqvist  <tml@novell.com>

	Bug 548988 - g_file_replace fails on Windows when the target file
	exists already

	* glocalfileoutputstream.c (g_local_file_output_stream_close): On
	Windows, close the file before potentially renaming it (in case we
	have been writing to a file with a temporary name).

	(g_local_file_output_stream_close, handle_overwrite_open): Use
	GLocalFileStat instead of plain struct stat, for passing to
	_g_local_file_info_create_etag(). Thus also use _fstati64()
	instead of plain fstat() on Windows.

2008-08-18  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.7 ===

2008-08-15  Padraig O'Briain  <padraig.obriain@sun.com>
